--- a/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/conteudos.html
+++ b/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/conteudos.html
@@ -5,7 +5,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Projeto Pixels Art</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
   <main id="paiDoPai">
@@ -56,7 +55,19 @@ primeiroFilhoDoFilho.appendChild(filhoDoPrimeiroFilhoDoFilho);
 // A partir desse filho criado, acesse terceiroFilho .
 const tercFilho = filhoDoPrimeiroFilhoDoFilho.parentElement.parentElement.nextElementSibling;
 
+// parte III
+// Remova todos os elementos filhos de paiDoPai exceto pai ,
+// elementoOndeVoceEsta e primeiroFilhoDoFilho .
 
+let str = 'elementoOndeVoceEsta primeiroFilhodoFilho';
+for (let i = 0; i < pai.childNodes.length; i += 1) {
+  let elemento = pai.childNodes[i];
+  elemento.classList.add('testes');
+
+  if (elemento.id.includes(str) ) {
+    pai.removeChild(pai.childNodes[i]);
+  }
+}
 
     </script>
   </main>
