--- a/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/pratica.html
+++ b/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/pratica.html
@@ -57,7 +57,54 @@
   </head>
   <body>
     <script>
-      // COLOQUE SEU CÓDIGO AQUI
+//       Adicione a tag h1 com o texto Exercício 5.2 - JavaScript DOM como filho da tag body ;
+const h1 = document.createElement('h1');
+h1.innerText = 'Exercício 5.2 - JavaScript DOM';
+document.body.appendChild(h1);
+// Adicione a tag main com a classe main-content como filho da tag body ;[]
+const main = document.createElement('main');
+main.classList.add('main-content');
+document.body.appendChild(main);
+// 3 Adicione a tag section com a classe center-content como filho da tag main criada no passo 2;
+const section = document.createElement('section');
+section.classList.add('center-content');
+main.appendChild(section);
+// Adicione a tag p como filho do section criado no passo 3 e coloque algum texto;
+const p = document.createElement('p');
+p.innerText = 'mandaram pôr algum texto aqui na tag pê';
+section.appendChild(p);
+// Adicione a tag section com a classe left-content como filho da tag main criada no passo 2;
+const section2 = document.createElement('section');
+section2.classList.add('left-content');
+main.appendChild(section2);
+// 6 Adicione a tag section com a classe right-content como filho da tag main criada no passo 2;
+const section3 = document.createElement('section');
+section3.classList.add('right-content');
+main.appendChild(section3);
+// Adicione uma imagem com src configurado para o valor https://picsum.photos/200 e classe small-image . 
+//Esse elemento deve ser filho do section criado no passo 5;
+const img = document.createElement('img');
+img.src = 'https://picsum.photos/200';
+img.classList.add('small-image');
+section2.appendChild(img);
+// Adicione uma lista não ordenada com os valores de 1 a 10 por extenso, ou seja, um , dois , três , ... 
+//como valores da lista. Essa lista deve ser filha do section criado no passo 6;
+const lista = document.createElement('ul');
+const numeros = ['um', 'dois', 'trẽs', 'quatro', 'cinco', 'seis', 'sete', 'oito', 'nove', 'dez'];
+for (let index = 0; index < numeros.length; index += 1) {
+  const elemLista = document.createElement('li');
+  elemLista.innerText = numeros[index];
+  lista.appendChild(elemLista);
+}
+section3.appendChild(lista);
+// Adicione 3 tags h3 , todas sendo filhas do main criado no passo 2.
+for (let index = 0; index < 3; index += 1) {
+  const tagH3 = document.createElement('h3');
+  tagH3.innerText = index + 1 + 'ª tag h3';
+  main.appendChild(tagH3);
+}
+
+      
     </script>
   </body>
 </html>
