--- a/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/pratica.html
+++ b/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/pratica.html
@@ -104,6 +104,37 @@ for (let index = 0; index < 3; index += 1) {
   main.appendChild(tagH3);
 }
 
+
+// Adicione a classe title na tag h1 criada;
+h1.classList.add('title');
+// Adicione a classe description nas 3 tags h3 criadas;
+const conjH3 = document.getElementsByTagName('h3');
+for (let i = 0; i < conjH3.length; i += 1) {
+  conjH3[i].classList.add('description');
+}
+// Remova a section criado no passo 5 (aquele que possui a classe left-content ). 
+//Utilize a função .removeChild() ;
+const removeSection = document.querySelector('.left-content');
+main.removeChild(removeSection);
+// Centralize a section criado no passo 6 (aquele que possui a classe right-content ).
+// Dica: para centralizar, basta configurar o margin-right: auto da section ;
+const centralizaSection = document.querySelector('.right-content');
+centralizaSection.style.marginRight = 'auto';
+// Troque a cor de fundo do elemento pai da section criada no passo 3 
+//(aquela que possui a classe center-content ) para a cor verde;
+const paiDeSection = section.parentElement;
+paiDeSection.style.backgroundColor = 'green';
+// Remova os dois últimos elementos ( nove e dez ) da lista criada no passo 8.
+const elementosLista = document.getElementsByTagName('li'); 
+for (let i = 0; i < numeros.length; i += 1) {
+  if (elementosLista[i].innerText.includes('nove')){
+    lista.removeChild(elementosLista[i]);
+  }
+  if (elementosLista[i].innerText.includes('dez')){
+    lista.removeChild(elementosLista[i]);
+  }
+}
+// poderia ter sido resolvido com ul.lastChild.remove(); x 2
       
     </script>
   </body>
