--- a/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/pratica.html
+++ b/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/pratica.html
@@ -104,7 +104,7 @@ for (let index = 0; index < 3; index += 1) {
   main.appendChild(tagH3);
 }
 
-
+//Segunda parte
 // Adicione a classe title na tag h1 criada;
 h1.classList.add('title');
 // Adicione a classe description nas 3 tags h3 criadas;
@@ -134,8 +134,7 @@ for (let i = 0; i < numeros.length; i += 1) {
     lista.removeChild(elementosLista[i]);
   }
 }
-// poderia ter sido resolvido com ul.lastChild.remove(); x 2
-      
+// poderia ter sido resolvido com ul.lastChild.remove(); x 2    
     </script>
   </body>
 </html>
