--- a/fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-1-html-css-forms/form.html
+++ b/fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-1-html-css-forms/form.html
@@ -7,26 +7,62 @@
   <title>[course] 6.1</title>
 </head>
 <body>
+
+<form>
+
   <fieldset>
-    <label for="nome">Nome:</label>
-    <input type="text" name="nome" required maxlength="40">
-    <label for="email">E-mail:</label>
-    <input type="email" name="email" maxlength="50" required>
-    <label for="cpf">CPF:</label>
-    <input type="text" name="cpf" maxlength="11" required>
-    <label for="endereco">Endereço:</label>
-    <input type="text" name="endereco" maxlength="200" required>
-    <label for="cidade">Cidade:</label>
-    <input type="text" name="cidade" maxlength="28" required>
-    <label for="estado">Estado:</label>
+
+    <label for="nome">Nome: </label>
+    <input type="text" name="nome" id="nome" required maxlength="40"/>
+
+    <label for="e-mail">E-mail: </label>
+    <input type="text" name="e-mail" id="e-mail" maxlength="50" required/>
+
+    <label for="cpf">CPF: </label>
+    <input type="text" name="cpf" maxlength="11" id="cpf" required>
+
+    <label for="endereco">Endereço: </label>
+    <input type="text" name="endereco" maxlength="200" id="endereco" required>
+
+    <label for="cidade">Cidade: </label>
+    <input type="text" name="cidade" maxlength="28" id="cidade" required>
+
+    <label for="estado">Estado: </label>
     <select name="estado" id="selec-estado" required></select>
-    <label for="tipo">Tipo:</label>
-    <input type="radio" name="tipo" value="casa">
-    <label for="tipo">Casa</label>
-    <input type="radio" name="tipo" value="apartamento">
-    <label for="tipo">Apartamento</label>
+
+    <div id="radio-button">
+      <label for="tipo">Tipo: </label>
+      <input type="radio" name="tipo" id="casa" value="Casa">
+      <label for="casa">Casa</label>
+      <input type="radio" name="tipo" id="ap" value="Apartamento">
+      <label for="ap">Apartamento</label>
+    </div>
 
   </fieldset>
+
+  <fieldset>
+
+    <label for="res-curriculo">Resumo do currículo: </label>
+    <textarea name="res-curriculo" maxlength="1000" required></textarea>
+
+    <label for="cargo">Cargo: </label>
+    <input type="text" name="cargo" maxlength="40" required>
+
+    <label for="desc-cargo">Descrição do cargo: </label>
+    <input type="text" name="desc-cargo" maxlength="500" required>
+
+    <label for="data-inicial">Data Inicial: </label>
+    <input type="text" id="data" name="data-inicial" required>
+
+  </fieldset>
+
+  <button type="submit" id="buttonSubmit">Enviar</button>
+  <button type="reset">Limpar</button>
+
+  <div id="consolidado"></div>
+
+</form>
  
   <script src="script.js"></script>
 </body>
+</html>
