feat: faz fetch na API coincap e mostra informaçoes

--- a/fundamentos/bloco-9-javascript-e-testes-assincronos/dia-2-javascript-assincrono-fetch-api-e-asyncawait/apiIndex.html
+++ b/fundamentos/bloco-9-javascript-e-testes-assincronos/dia-2-javascript-assincrono-fetch-api-e-asyncawait/apiIndex.html
@@ -4,9 +4,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Cripto Coin Project</title>
+  <link rel="stylesheet" href="apiCoin.css">
 </head>
 <body>
+  <h1>Top Ten Cripto Values</h1>
+  <ol class="cripto-list"></ol>
   
+  <script src="api.js" ></script>
 </body>
 </html>
